@@ -4,7 +4,7 @@
 
 # ---- General ---------------------------------------------------------------------
 
-buildversion=101
+buildversion=103
 
 year=2010
 name=SemanticTurkey
